# fpl-mcp

./: .env.example  .gitignore  README.md  cache.py  formatter.py  formatting.py  justfile  pyproject.toml  requirements.txt  server.py
src/: cache.py  formatter.py  server.py
