[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fpl-mcp"
version = "0.1.0"
description = "MCP server for Fantasy Premier League API"
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]",
    "httpx",
]

[project.scripts]
fpl-mcp = "server:main"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
